--- a/Shopping List/style.css
+++ b/Shopping List/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
+
 :root {
   /* color */
   --color-black: #3f454d;
@@ -24,6 +26,7 @@
 }
 
 body {
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   background-color: var(--color-light-grey);
 }
@@ -50,10 +53,11 @@ body {
 
 .items {
   width: 100%;
-  height: 432px;
+  height: 434px;
   padding: 0;
   margin: 0;
   overflow: auto;
+  background-color: rgb(246, 246, 252);
 }
 
 .item {
