--- a/Game/style.css
+++ b/Game/style.css
@@ -1,6 +1,7 @@
 :root {
   --color-black: rgb(24, 23, 23);
   --fontsize-btn: 24px;
+  --fontsize-popup: 28px;
 }
 
 body {
@@ -23,6 +24,7 @@ button {
   margin: auto;
   background: url(img/background.png) center/cover;
   border-radius: 16px;
+  /* border: 2px solid blue; */
 }
 
 .game__menu {
@@ -63,11 +65,13 @@ button {
   margin-top: 8px;
   border-radius: 50%;
   background-color: tomato;
+  visibility: hidden;
 }
 .game__field {
   position: relative;
   width: 100%;
   height: 100%;
+  /* border: 2px solid red; */
 }
 
 .game__field img {
@@ -81,10 +85,11 @@ button {
   width: 400px;
   height: 140px;
   margin: auto;
-  background-color: #00000090;
+  background-color: rgba(0, 0, 0, 0.8);
   padding: 24px;
   border-radius: 16px;
   color: white;
+  font-size: var(--fontsize-popup);
   transform: translateY(-150%);
 }
 
