--- a/Game/style.css
+++ b/Game/style.css
@@ -7,6 +7,7 @@
 body {
   text-align: center;
   box-sizing: border-box;
+  background-color: var(--color-black);
 }
 
 button {
@@ -56,6 +57,8 @@ button {
   background-color: whitesmoke;
   margin-top: 8px;
   font-size: var(--fontsize-btn);
+  user-select: none;
+  cursor: auto;
 }
 
 .game__score {
@@ -63,10 +66,14 @@ button {
   height: 48px;
   line-height: 48px;
   margin-top: 8px;
+  font-size: 24px;
   border-radius: 50%;
   background-color: tomato;
   visibility: hidden;
+  user-select: none;
+  cursor: auto;
 }
+
 .game__field {
   position: relative;
   width: 100%;
@@ -76,6 +83,16 @@ button {
 
 .game__field img {
   cursor: pointer;
+}
+
+.carrot,
+.bug {
+  transition: transform 100ms ease-in;
+}
+
+.carrot:hover,
+.bug:hover {
+  transform: scale(1.1);
 }
 
 .pop-up {
